--- a/+/2023/IEEE.ipynb
+++ b/+/2023/IEEE.ipynb
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "5ea7dcbb",
    "metadata": {},
    "outputs": [
@@ -1542,16 +1542,38 @@
        "dict"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import dill\n",
     "with open('HDAT/L2_P67.dat', 'rb') as dat:\n",
     "    _d = dill.load(dat)\n",
     "    \n",
     "type(_d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cfde4e86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(_d.keys())"
    ]
   },
   {
